--- a/stilovi.css
+++ b/stilovi.css
@@ -4,4 +4,56 @@
     padding: 20px;
     border: 1px solid grey;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+.vrsta1{
+    background-color: coral;
+    padding: 2px;
+    margin: 2px;
+    border: 2px solid rgb(102, 73, 70);
+    color: beige;
+    text-decoration: none;
+    
+}
+.vrsta1:hover{
+    background-color: crimson;
+    font-size: large;
+}
+.vrsta2{
+    margin: 10px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: darkcyan;
+    font-weight: bold;
+}
+li{
+    line-height: 200%;
+}
+.Uzrecica{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: xx-large;
+    margin-left: 30px;
+    padding: 10px;
+    border-left: 5px solid mediumseagreen;
+    display: inline-block;
+}
+.Uzrecica:hover{
+    background-color:mediumseagreen;
+    color: azure;
+}
+table, th, td{
+    border: 1px dotted black;
+    border-collapse: collapse;
+    
+}
+
+th{
+    background-color: darkorchid;
+    color: white;
+    padding: 3px;
+}
+
+td{
+    padding: 3px;
+    text-align: center;
 }
